[package]
name = "gran-turismo-query"
description = "Implements the packet parser for Gran Turismo 7 telemetry data, allowing a developer to retrieve data from a running game."
version = "0.1.1"
edition = "2021"
exclude = ["./examples"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "2.4.1"
byteorder = "1.5.0"
salsa20 = "0.10.2"
thiserror = "1.0.50"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = {version = "1.0", optional = true }

[features]
json = ["serde", "serde_json"]